--- a/end_to_end.ipynb
+++ b/end_to_end.ipynb
@@ -70,11 +70,11 @@
       "metadata": {
         "id": "vt0DGW8oWLzf",
         "colab_type": "code",
+        "outputId": "01449d45-a61e-41cc-bad7-fc6ee54be2db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "5592db68-472a-4d60-cdf2-28bb3ddad691"
+        }
       },
       "source": [
         "%matplotlib inline\n",
@@ -82,28 +82,28 @@
         "housing = housing_data\n",
         "housing.hist(bins=50,figsize=(20,15))\n"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7fd93c2028d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b557cc0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b51e2b0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b4cc860>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b4fee10>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b4b9400>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b4699b0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b41ef98>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd93b41efd0>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07412438>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c073ea9b0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c0739af60>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07352550>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07381b00>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c0733b0f0>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c072e76a0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07294c88>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07294cc0>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -124,16 +124,16 @@
       "metadata": {
         "id": "XHnQpYsCxqFo",
         "colab_type": "code",
-        "outputId": "067e1a5f-aaca-4960-e8da-d116e508b08d",
+        "outputId": "5146effb-ee26-4685-d6f7-41a900d4be77",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 277
         }
       },
       "source": [
         "housing.info()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "hmz6-PfQxx8r",
         "colab_type": "code",
-        "outputId": "a6f7d0b0-7153-4bbb-a714-d67100c19d98",
+        "outputId": "cf27fc09-1c50-4db9-dc97-c387a758d61e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
@@ -220,19 +220,19 @@
       "source": [
         "housing[\"median_income\"].hist()"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd92b70bbe0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4bf75b1198>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -314,7 +314,7 @@
       "metadata": {
         "id": "BzrE6XiU07pE",
         "colab_type": "code",
-        "outputId": "3044cd89-3e2d-4710-8b36-1e751dc62a0c",
+        "outputId": "1c284a8a-c30d-4140-809e-0be44ab97634",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -325,19 +325,19 @@
         "plt.legend()\n",
         "plt.colorbar()"
       ],
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7fd92786e048>"
+              "<matplotlib.colorbar.Colorbar at 0x7f4bf6023b70>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -371,16 +371,16 @@
       "metadata": {
         "id": "hVWhqDtY4eqJ",
         "colab_type": "code",
+        "outputId": "70eed7c8-0c60-4870-f94f-a9f930f05ff4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        },
-        "outputId": "b1e39e9f-2317-4643-a20a-445409eae78b"
+        }
       },
       "source": [
         "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
       ],
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 17
         }
       ]
     },
@@ -410,46 +410,46 @@
       "metadata": {
         "id": "oVs706DwQxwz",
         "colab_type": "code",
+        "outputId": "43c633ce-9264-49f4-9a71-b1b8b8b21611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 833
-        },
-        "outputId": "cae06ff3-d65d-42dd-f874-cca17e905e20"
+        }
       },
       "source": [
         "from pandas.plotting import scatter_matrix\n",
         "attributes = [\"median_house_value\",\"median_income\",\"total_rooms\",\"housing_median_age\"]\n",
         "scatter_matrix(housing[attributes],figsize=(12,8))"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7fd9277de5f8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd92779ab00>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd927747b70>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd9276f8cc0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7fd927728e10>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd9276dbf60>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd9276970f0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd927646278>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7fd9276462b0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd927622080>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd9275ca630>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd92757ebe0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7fd92753d1d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd92756b780>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd92751ed30>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd9274db320>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf72d5be0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf37a4898>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3757e48>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3713438>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf36c29e8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3677f98>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3633588>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3662b70>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3662ba8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf35d26d8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3583c88>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3536f98>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34ef588>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf351fb38>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34de128>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34906d8>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -485,16 +485,16 @@
       "metadata": {
         "id": "UUTIA3V1Vfc5",
         "colab_type": "code",
+        "outputId": "effb0642-af60-43de-b9eb-86b437c12609",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
-        },
-        "outputId": "131e9b7d-f45a-493f-d052-c093a597542b"
+        }
       },
       "source": [
         "housing.corr()[\"median_house_value\"].sort_values(ascending=False)"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 20
         }
       ]
     },
@@ -545,6 +545,213 @@
       },
       "source": [
         "################# DATA CLEANING ##################################################"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SmrQOqbokF-h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.impute import SimpleImputer\n",
+        "imputer = SimpleImputer(strategy=\"median\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bTCTDmt0kR17",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "baacadfa-8336-4c33-f544-c77b25acfd32"
+      },
+      "source": [
+        "housing_num = housing.drop(\"ocean_proximity\",axis=1)\n",
+        "imputer.fit(housing_num)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+              "              missing_values=nan, strategy='median', verbose=0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IF2FVyoHlJ0V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X = imputer.transform(housing_num)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UwKzNPCflX3X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "housing_tr = pd.DataFrame(X, columns=housing_num.columns)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XkIat1jwlm2p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d996f098-2532-49f4-e4bb-de576c4057a4"
+      },
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "encoder = LabelEncoder()\n",
+        "housing_cat = housing[\"ocean_proximity\"]\n",
+        "housing_cat_encoded = encoder.fit_transform(housing_cat)\n",
+        "np.unique(housing_cat_encoded)"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7YhT13-5l-1K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "outputId": "2255415c-42bd-4bbf-fa88-ea501d4966f2"
+      },
+      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "encoder = OneHotEncoder()\n",
+        "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1,1))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/preprocessing/_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+            "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+            "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+            "  warnings.warn(msg, FutureWarning)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrYwA67HmJPr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.base import BaseEstimator,TransformerMixin\n",
+        "rooms_ix, bedrooms_ix,population_ix, households_ix = 3,4,5,6\n",
+        "\n",
+        "class CombinedAttributesAdder(BaseEstimator,TransformerMixin):\n",
+        "  def __init__(self,add_bedrooms_per_room = True):\n",
+        "    self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+        "  def fit(self,X,y=None):\n",
+        "    return self\n",
+        "  def transform(self,X,y=None):\n",
+        "    rooms_per_household = X [:,rooms_ix]/X[:,households_ix]\n",
+        "    population_per_household = X[:,population_ix]/X[:,households_ix]\n",
+        "    if self.add_bedrooms_per_room:\n",
+        "      bedrooms_per_room = X[:,bedrooms_ix]/X[:,rooms_ix]\n",
+        "      return np.c_[X,rooms_per_household,population_per_household,bedrooms_per_room]\n",
+        "    else:\n",
+        "      return np.c_[X,rooms_per_household,population_per_household]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Atqmbl8pGe6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "dabd1e31-ef53-4f39-f017-969cffe75060"
+      },
+      "source": [
+        "#############Transformation Pipeline##########################################"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6447.0, 4159.0, 4357.0, ..., 3073.0, 5464.0, 1616.0], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kRxapfwJpHzX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
