--- a/end_to_end.ipynb
+++ b/end_to_end.ipynb
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "vt0DGW8oWLzf",
         "colab_type": "code",
-        "outputId": "01449d45-a61e-41cc-bad7-fc6ee54be2db",
+        "outputId": "ad3ccf91-cabe-4708-fc00-dd18b3d4efef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -82,28 +82,28 @@
         "housing = housing_data\n",
         "housing.hist(bins=50,figsize=(20,15))\n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07412438>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c073ea9b0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c0739af60>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07352550>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07381b00>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c0733b0f0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4c072e76a0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07294c88>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4c07294cc0>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c386458d0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3799cd30>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3795c320>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3790a8d0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3793ce80>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c378f7470>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c378a8a20>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3785bfd0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c37869080>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -124,16 +124,16 @@
       "metadata": {
         "id": "XHnQpYsCxqFo",
         "colab_type": "code",
-        "outputId": "5146effb-ee26-4685-d6f7-41a900d4be77",
+        "outputId": "94648ad5-9909-4de8-9bee-648192c8da18",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 277
+          "height": 272
         }
       },
       "source": [
         "housing.info()"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,28 +211,28 @@
       "metadata": {
         "id": "hmz6-PfQxx8r",
         "colab_type": "code",
-        "outputId": "cf27fc09-1c50-4db9-dc97-c387a758d61e",
+        "outputId": "cb589ac0-9a53-4af7-992a-e529133ede76",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 282
         }
       },
       "source": [
         "housing[\"median_income\"].hist()"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4bf75b1198>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f2c27b706a0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -314,10 +314,10 @@
       "metadata": {
         "id": "BzrE6XiU07pE",
         "colab_type": "code",
-        "outputId": "1c284a8a-c30d-4140-809e-0be44ab97634",
+        "outputId": "47318934-8420-4e7e-c0e6-bcbc9df3dd59",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 286
         }
       },
       "source": [
@@ -325,19 +325,19 @@
         "plt.legend()\n",
         "plt.colorbar()"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7f4bf6023b70>"
+              "<matplotlib.colorbar.Colorbar at 0x7f2c23d7a0b8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
@@ -371,16 +371,16 @@
       "metadata": {
         "id": "hVWhqDtY4eqJ",
         "colab_type": "code",
-        "outputId": "70eed7c8-0c60-4870-f94f-a9f930f05ff4",
+        "outputId": "492e9ee3-3ecf-4d3d-a101-c752c78256a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 191
+          "height": 187
         }
       },
       "source": [
         "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -410,10 +410,10 @@
       "metadata": {
         "id": "oVs706DwQxwz",
         "colab_type": "code",
-        "outputId": "43c633ce-9264-49f4-9a71-b1b8b8b21611",
+        "outputId": "9daa5d42-bfc3-4278-b44b-650e23f17117",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 833
+          "height": 807
         }
       },
       "source": [
@@ -421,35 +421,35 @@
         "attributes = [\"median_house_value\",\"median_income\",\"total_rooms\",\"housing_median_age\"]\n",
         "scatter_matrix(housing[attributes],figsize=(12,8))"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf72d5be0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf37a4898>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3757e48>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3713438>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf36c29e8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3677f98>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3633588>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3662b70>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3662ba8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf35d26d8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3583c88>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf3536f98>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34ef588>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf351fb38>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34de128>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4bf34906d8>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c2789ffd0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23ceedd8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23d2c3c8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23cdb978>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c8ef28>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c4a518>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23bf96d8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c2ccc0>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c2ccf8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b9a828>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b4bdd8>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b0a3c8>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23aba978>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23a6df28>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23aa8518>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23a5bac8>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -485,16 +485,16 @@
       "metadata": {
         "id": "UUTIA3V1Vfc5",
         "colab_type": "code",
-        "outputId": "effb0642-af60-43de-b9eb-86b437c12609",
+        "outputId": "0e4a6616-1af2-4d4a-f965-e1317f7601c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 238
         }
       },
       "source": [
         "housing.corr()[\"median_house_value\"].sort_values(ascending=False)"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 19
         }
       ]
     },
@@ -568,17 +568,17 @@
       "metadata": {
         "id": "bTCTDmt0kR17",
         "colab_type": "code",
+        "outputId": "2ef272dc-bd78-4a19-8fe4-94e66f954943",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "baacadfa-8336-4c33-f544-c77b25acfd32"
+          "height": 51
+        }
       },
       "source": [
         "housing_num = housing.drop(\"ocean_proximity\",axis=1)\n",
         "imputer.fit(housing_num)"
       ],
-      "execution_count": 29,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 23
         }
       ]
     },
@@ -626,11 +626,11 @@
       "metadata": {
         "id": "XkIat1jwlm2p",
         "colab_type": "code",
+        "outputId": "ae991ad8-9716-4932-a6f5-44f666f2264e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "d996f098-2532-49f4-e4bb-de576c4057a4"
+          "height": 34
+        }
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -639,7 +639,7 @@
         "housing_cat_encoded = encoder.fit_transform(housing_cat)\n",
         "np.unique(housing_cat_encoded)"
       ],
-      "execution_count": 39,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +651,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 26
         }
       ]
     },
@@ -660,18 +660,18 @@
       "metadata": {
         "id": "7YhT13-5l-1K",
         "colab_type": "code",
+        "outputId": "4aad8f30-6e3f-46c8-d7bd-57a144d38820",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
-        },
-        "outputId": "2255415c-42bd-4bbf-fa88-ea501d4966f2"
+          "height": 105
+        }
       },
       "source": [
         "from sklearn.preprocessing import OneHotEncoder\n",
         "encoder = OneHotEncoder()\n",
         "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1,1))"
       ],
-      "execution_count": 41,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,35 +718,125 @@
       "metadata": {
         "id": "8Atqmbl8pGe6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "dabd1e31-ef53-4f39-f017-969cffe75060"
+        "colab": {}
       },
       "source": [
         "#############Transformation Pipeline##########################################"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5XSK8dq2SrlB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class DataFrameSelector(BaseEstimator,TransformerMixin):\n",
+        "  def __init__(self,attribute_names):\n",
+        "    self.attribute_names = attribute_names\n",
+        "  def fit(self,X,y=None):\n",
+        "    return self\n",
+        "  def transform(self,X):\n",
+        "    return X[self.attribute_names].values\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kRxapfwJpHzX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import LabelBinarizer\n",
+        "num_attribs = list(housing_num)\n",
+        "cat_attribs = [\"ocean_proximity\"]\n",
+        "num_pipeline = Pipeline([\n",
+        "                 ('selector',DataFrameSelector(num_attribs)),                \n",
+        "                 ('imputer',SimpleImputer(strategy =\"median\")),\n",
+        "                 ('attribs_adder', CombinedAttributesAdder()),\n",
+        "                 ('std_scaler',StandardScaler()),\n",
+        "])\n",
+        "cat_pipeline = Pipeline([\n",
+        "                 ('selector',DataFrameSelector(cat_attribs)),\n",
+        "                 ('one_hot_encoder',OneHotEncoder(sparse = False)),\n",
+        "])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MWimm6HvT84l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.pipeline import FeatureUnion\n",
+        "\n",
+        "full_pipline = FeatureUnion(transformer_list = [\n",
+        "                                            (\"num_pipeline\",num_pipeline),\n",
+        "                                            (\"cat_pipeline\",cat_pipeline),\n",
+        "                                            ])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MHufDkmUTSJD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "37848dec-a128-46c6-e22b-085fb8e4f064"
+      },
+      "source": [
+        "housing_prep = full_pipline.fit_transform(housing)\n",
+        "housing_prep"
+      ],
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([6447.0, 4159.0, 4357.0, ..., 3073.0, 5464.0, 1616.0], dtype=object)"
+              "array([[ 0.57471497, -0.69620912,  0.03285951, ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.83839441, -0.86074221,  0.82471029, ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.24635944, -0.65390061, -0.12551065, ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       ...,\n",
+              "       [ 0.52496413, -0.66800344,  0.19122966, ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 1.10704893, -0.75732141, -0.12551065, ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.31601062,  0.55894333, -0.75899128, ...,  0.        ,\n",
+              "         0.        ,  0.        ]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 68
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kRxapfwJpHzX",
+        "id": "gHmFlW4rWcCi",
         "colab_type": "code",
         "colab": {}
       },
